# ChangeLog for app-misc/cdircmp
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/cdircmp/ChangeLog,v 1.10 2008/03/26 18:37:38 armin76 Exp $

  26 Mar 2008; Raúl Porcel <armin76@gentoo.org> cdircmp-0.3.ebuild:
  alpha/x86 stable

  31 May 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove myself as I'm retiring.

  22 Mar 2005; Bryan Østergaard <kloeri@gentoo.org> cdircmp-0.3.ebuild:
  Add ~alpha keyword.

  16 Jan 2005; Michael Hanselmann <hansmi@gentoo.org> cdircmp-0.3.ebuild:
  Added to ~ppc, bug 78203.

  02 Jan 2005; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  04 Oct 2004; Bryan Østergaard <kloeri@gentoo.org> cdircmp-0.3.ebuild:
  Clean up ebuild.

  12 Jul 2004; Bryan Østergaard <kloeri@gentoo.org> cdircmp-0.3.ebuild:
  Use default src_compile.

*cdircmp-0.3 (02 May 2004)

  02 May 2004; Bryan Østergaard <kloeri@gentoo.org> +metadata.xml,
  +cdircmp-0.3.ebuild:
  Initial import, bug #48249.
