@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/cdircmp
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/cdircmp/ChangeLog,v 1.10 2008/03/26 18:37:38 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/cdircmp/ChangeLog,v 1.11 2008/04/21 16:49:28 phreak Exp $
+
+  21 Apr 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
+  Fix up metadata.xml. If there's no maintainer for the package, the metadata
+  also needs to contain m-needed@g.o.
 
   26 Mar 2008; Raúl Porcel <armin76@gentoo.org> cdircmp-0.3.ebuild:
   alpha/x86 stable
